--- a/departures_web/html/view.html
+++ b/departures_web/html/view.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        height: 90%;
-      }
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        input {
+            enabled: false;
+        }
+        #map {
+            height: 90%;
+        }
     </style>
 </head>
 
 <body>
     <div id="map"></div>
+    Latitute:  <input id="latitude"></input>
+    Longitude: <input id="longitude"></input>
+    Radius:    <input id="radius"></input>
     <button onclick="view.centerCurrentPosition()">Center</button>
 </body>
 
@@ -28,6 +34,8 @@
 
 var view = new View();
 
+view.updatePosition();
+view.updateRadius();
 view.centerCurrentPosition();
 
 </script>
