Load and center map synchronously.

--- a/departures_web/html/view.html
+++ b/departures_web/html/view.html
@@ -34,13 +34,10 @@
 
 var view = new View();
 
-view.updateCenter();
-view.updateZoom();
-view.centerCurrentPosition();
-
 </script>
 
-<script async defer
+<script
+    type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key={{ gmak }}&callback=view.initMap">
 </script>
 
