Request feed index from browser.

--- a/transit_www/html/view.html
+++ b/transit_www/html/view.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Departures</title>
+    <title>Public Transit</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
@@ -27,6 +27,9 @@
     Zoom:    <input id="zoom"></input>
     <button onclick="view.centerCurrentPosition()">Center</button>
 </body>
+
+<script src="https://cdn.rawgit.com/kawanet/msgpack-lite/8bb09d0b081368f93c1a196f9ea97220ce8b4adc/dist/msgpack.min.js"></script>
+<script src="https://cdn.rawgit.com/nodeca/pako/653c0b00d8941c89d09ed4546d2179001ec44efc/dist/pako_inflate.min.js"></script>
 
 <script type="text/javascript">
 
