Add favicon and make it working beside https.
- After moving the site beside https its hostname changed to node01
- To work beside https pin icon and fav icon has to be fetch using https too.

--- a/transit_www/html/view.html
+++ b/transit_www/html/view.html
@@ -18,6 +18,7 @@
             height: 100%;
         }
     </style>
+    <link rel="icon" type="image/png" href="greenpin.png" />
 </head>
 
 <body>
