Update de icon.

--- a/transit_www/html/view.html
+++ b/transit_www/html/view.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Public Transit</title>
+    <title>Pub Transit</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
@@ -18,7 +18,9 @@
             height: 100%;
         }
     </style>
-    <link rel="icon" type="image/png" href="greenpin.png" />
+    <link rel="icon" type="image/png"
+        href="https://www.pubtransit.org/icon.png"
+    />
 </head>
 
 <body>
